--- a/src/app/@public/core/components/navbar/navbar.component.html
+++ b/src/app/@public/core/components/navbar/navbar.component.html
@@ -49,7 +49,7 @@
         </li>
         <li class="dropdown" *ngIf="access">
           <a
-            class="btn btn-secondary dropdown-toggle"
+            class="btn btn-secondary dropdown-toggle m-2"
             id="dropdownMenuLink"
             href="#"
             role="button"
@@ -70,9 +70,12 @@
             >
           </div>
         </li>
-        <li class="nav-item" *ngIf="!access">
+        <li class="nav-item">
           <a class="nav-link wi" (click)="open()">
             <i class="fas fa-shopping-cart"></i>
+            <span class="badge badge-success notification">{{
+              cartItemsTotal
+            }}</span>
           </a>
         </li>
       </div>
