--- a/src/app/@public/core/components/navbar/navbar.component.scss
+++ b/src/app/@public/core/components/navbar/navbar.component.scss
@@ -21,3 +21,10 @@
 .sombra:hover {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+.badge.badge-success.notification {
+  position: relative;
+  top: -12px;
+  left: -2px;
+  border-radius: 10px;
+}
