--- a/src/app/@public/pages/tienda/details/details.component.html
+++ b/src/app/@public/pages/tienda/details/details.component.html
@@ -40,7 +40,8 @@
             </div>
           </div>
           <div class="col-sm-12">
-            Stock: {{ product.stock }}
+            Stock: {{ product.stock }} <br /><span class="talla1"> Talla:</span>
+            {{ product.talla }}
             <hr />
             <shop-qty-selector
               [qty]="product.qty"
@@ -57,9 +58,12 @@
           </option>
         </select>
       </div>
+      <button (click)="addToCart()" class="btn btn-dark mt-2">
+        <i class="fas fa-cart-plus"></i>&nbsp;&nbsp; Añadir
+      </button>
     </div>
   </div>
-  <hr/>
+  <hr />
 
   <h3 class="my-4">Tenis que te podrian interesar</h3>
 
